# Calmendar

./: README.md  pyproject.toml  run.py
cli/: cli.py
database/: schema.sql
docs/: API.md  CLI.md  DATABASE.md  GUI.md
server/: ai.py  app.py  database.py
server/routes/: ai.py  breaks.py  profile.py  reflections.py  tasks.py
server/static/css/: style.css
server/static/js/: main.js
server/templates/: base.html  index.html  onboarding.html  reflect.html  wellness.html
tests/: conftest.py  test_breaks.py  test_breaks_action_by_name.py  test_logic.py  test_profile.py  test_reflections.py  test_tasks.py
