[project]
name = "calmendar"
version = "0.1.0"
description = "A daily planner web app focused on mental well-being"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "anthropic>=0.30.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
